# envoy-control-plane-v2

./: .dockerignore  .env.example  .gitignore  CONFIGURATION.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY-ARCHITECTURE.md  build.rs  config.e2e.yaml  config.yaml  docker-compose.test.plain.yml  docker-compose.test.tls.yml  docker-compose.test.yml  envoy-bootstrap.yaml  static-envoy-config-api.http  test-grpc.sh  testing-api.http
.github/workflows/: ci.yml
backend/: Cargo.toml  Dockerfile  build.rs  config.e2e.yaml  config.yaml
backend/proto/: xds.proto
backend/proto/envoy/config/endpoint/v3/: endpoint.proto
backend/proto/envoy/config/route/v3/: route.proto
backend/src/: auth.rs  auth_handlers.rs  auth_middleware.rs  lib.rs  main.rs  rbac.rs
backend/src/api/: errors.rs  handlers.rs  mod.rs  routes.rs
backend/src/config/: mod.rs  validation.rs
backend/src/envoy/: config_generator.rs  mod.rs
backend/src/security/: jwt_rotation.rs  mod.rs
backend/src/storage/: mod.rs  models.rs  store.rs
backend/src/validation/: mod.rs  security.rs
backend/src/xds/: conversion.rs  conversion.rs.old  mod.rs  server.rs  simple_server.rs
backend/src/xds/conversion/: clusters.rs  errors.rs  listeners.rs  mod.rs  routes.rs  utils.rs
backend/src/xds/filters/: authentication.rs  cors.rs  header_manipulation.rs  mod.rs  rate_limit.rs  request_validation.rs
backend/tests/: auth_tests.rs  e2e_integration_tests.rs  http_filter_xds_test.rs  jwt_validation_tests.rs  lua_injection_tests.rs  protobuf_conversion_tests.rs  rest_api_tests.rs  versioning_tests.rs  xds_integration_tests.rs
certs/: server.crt  server.key
configs/: envoy-proxy-1.yaml
docker/: docker-compose.test.plain.yml  docker-compose.test.tls.yml
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ProtectedRoute.tsx  UserMenu.tsx
frontend/src/lib/: api-client.ts  auth-context.tsx  retry-utils.ts  validation.ts
frontend/src/lib/__tests__/: auth-flow.test.md
frontend/src/pages/: Clusters.tsx  Dashboard.tsx  Login.tsx  Routes.tsx
proto/envoy/config/cluster/v3/: cluster.proto
proto/envoy/config/core/v3/: address.proto
proto/envoy/service/cluster/v3/: cds.proto
proto/envoy/service/discovery/v3/: ads.proto
proto/envoy/service/route/v3/: rds.proto
src/: lib.rs  main.rs
src/api/: handlers.rs  mod.rs  routes.rs
src/config/: mod.rs  validation.rs
src/envoy/: config_generator.rs  mod.rs
src/security/: mod.rs  tls.rs
src/storage/: mod.rs  models.rs  store.rs
src/xds/: conversion.rs  mod.rs  server.rs  simple_server.rs
tests/: e2e_integration_tests.rs  protobuf_conversion_tests.rs  rest_api_tests.rs  versioning_tests.rs  xds_integration_tests.rs
tests/e2e/: envoy-bootstrap-generated.yaml  envoy-bootstrap.yaml
