[package]
name = "envoy-control-plane"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web server framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Thread-safe storage
dashmap = "5.5"

# HTTP client (for testing)
reqwest = { version = "0.11", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.14"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
# Testing
tokio-test = "0.4"
