[package]
name = "envoy-control-plane"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web server framework
axum = "0.8.4"                # Latest stable Axum
axum-extra = { version = "0.10.1", features = ["typed-header"] }  # For JWT header extraction
tokio = { version = "1.46", features = ["full"] }
tokio-stream = "0.1.17"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Thread-safe storage
dashmap = "5.5"

# HTTP client (for testing)
reqwest = { version = "0.11", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.14"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Authentication & Authorization - Modern 2024 Stack
jsonwebtoken = "9.3.1"           # JWT creation & validation
casbin = "2.10.1"                # RBAC authorization system  
chrono = { version = "0.4.41", features = ["serde"] }  # Time handling
bcrypt = "0.15"                  # Password hashing
async-trait = "0.1.88"          # For async traits


# gRPC and protobuf for xDS
tonic = { version = "0.13.1", features = ["tls-ring"] }
tonic-build = "0.13.1"
tonic-reflection = "0.13.1"
prost = "0.13"
prost-types = "0.13"
envoy-types = "0.6.0"

[dev-dependencies]
# Testing
tokio-test = "0.4"
reqwest = { version = "0.11", features = ["json"] }
tower-test = "0.4"
serial_test = "3.0"
tempfile = "3.0"  # For creating temporary test files

[build-dependencies]
tonic-build = "0.13.1"
