[package]
name = "envoy-control-plane"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web server framework
axum = "0.8.4"                # Latest stable Axum
axum-extra = { version = "0.10.1", features = ["typed-header", "cookie"] }  # For JWT and cookie support
tokio = { version = "1.47", features = ["full"] }
tokio-stream = "0.1.17"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Thread-safe storage
dashmap = "5.5"

# HTTP client (for testing)
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Configuration
config = "0.15"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Authentication & Authorization - Modern 2024 Stack
jsonwebtoken = "9.3.1"           # JWT creation & validation
casbin = "2.10.1"                # RBAC authorization system  
chrono = { version = "0.4.41", features = ["serde"] }  # Time handling
time = "0.3.41"  # For cookie max_age - latest stable
bcrypt = "0.17"                  # Password hashing
async-trait = "0.1.88"          # For async traits
rand = "0.8"                     # For secure secret generation

# Input Validation & Security
validator = { version = "0.20.0", features = ["derive"] }  # Derive-based input validation
regex = "1.10.0"                 # Pattern matching for input sanitization
lazy_static = "1.4.0"           # Static regex compilation for performance
base64 = "0.22"                 # Base64 encoding for JWT keys


# gRPC and protobuf for xDS
tonic = { version = "0.13.1", features = ["tls-ring"] }
tonic-build = "0.13.1"
tonic-reflection = "0.13.1"
prost = "0.13"
prost-types = "0.13"
envoy-types = "0.6.0"

[dev-dependencies]
# Testing
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json"] }
tower-test = "0.4"
serial_test = "3.0"
tempfile = "3.0"  # For creating temporary test files
rand = "0.8"      # For secure test secret generation

[build-dependencies]
tonic-build = "0.13.1"
